i added create plan page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li class="menu_list"><a href="index.html" class="menu_link">HOME</a></li>
                     <li class="menu_list"><a href="about.html" class="menu_link">ABOUT US</a></li>
-                    <li class="menu_list"><a href="" class="menu_link">Create your plan</a></li>
+                    <li class="menu_list"><a href="create.html" class="menu_link">Create your plan</a></li>
                 </ul>
             </nav>
         </div>
