--- a/create.html
+++ b/create.html
@@ -14,6 +14,14 @@
     <header>
         <div class="header__container">
             <a href="index.html"><img src="images/Group 5.svg" alt="" class="logo"></a>
+            <div class="of_screen_menu">
+                <ul class="menuBurger">
+                    <i class="fa-solid fa-xmark"></i>
+                    <li class="menu_list_burger"><a href="index.html" class="menu_link_burger">HOME</a></li>
+                    <li class="menu_list_burger"><a href="about.html" class="menu_link_burger">ABOUT US</a></li>
+                    <li class="menu_list_burger"><a href="create.html" class="menu_link_burger">Create your plan</a></li>
+                </ul>
+            </div>
             <nav>
                 <ul class="menu">
                     <li class="menu_list"><a href="index.html" class="menu_link">HOME</a></li>
@@ -21,6 +29,9 @@
                     <li class="menu_list"><a href="create.html" class="menu_link">Create your plan</a></li>
                 </ul>
             </nav>
+            <div class="burgerBar">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </div>
     </header>
     <main>
@@ -197,5 +208,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
